   (Xavier Leroy, review by Damien Doligez and Gabriel Scherer)

- #9533: Added String.starts_with and String.ends_with.
  (Bernhard Schommer, review by Daniel Bünzli, Gabriel Scherer and
  Alain Frisch)

- #9663: Extend Printexc API for raw backtrace entries.
  (Stephen Dolan, review by Nicolás Ojeda Bär and Gabriel Scherer)

- #9763: Add function Hashtbl.rebuild to convert from old hash table
  formats (that may have been saved to persistent storage) to the
  current hash table format.  Remove leftover support for the hash
  table format and generic hash function that were in use before OCaml 4.00.
  (Xavier Leroy, review by Nicolás Ojeda Bär)

- #9797: Add Sys.mkdir and Sys.rmdir.
  (David Allsopp, review by Nicolás Ojeda Bär, Sébastien Hinderer and
   Xavier Leroy)

### Other libraries:

* #9206, #9419: update documentation of the threads library;
  deprecate Thread.kill, Thread.wait_read, Thread.wait_write,
  and the whole ThreadUnix module.
  (Xavier Leroy, review by Florian Angeletti, Guillaume Munch-Maccagnoni,
   and Gabriel Scherer)

- #9573: reimplement Unix.create_process and related functions without
  Unix.fork, for better efficiency and compatibility with threads.
  (Xavier Leroy, review by Gabriel Scherer and Anil Madhavapeddy)

- #9575: Add Unix.is_inet6_addr
  (Nicolás Ojeda Bär, review by Xavier Leroy)

- #9593: Use new flag for non-elevated symbolic links and test for Developer
  Mode on Windows
  (Manuel Hornung, review by David Allsopp and Nicolás Ojeda Bär)

* #9601: Return EPERM for EUNKNOWN -1314 in win32unix (principally affects
  error handling when Unix.symlink is unavailable)
  (David Allsopp, review by Xavier Leroy)

- #9338, #9790: Dynlink: make sure *_units () functions report accurate
  information before the first load.
  (Daniel Bünzli, review by Xavier Leroy and Nicolás Ojeda Bär)

- #9802: Ensure signals are handled before Unix.kill returns
  (Stephen Dolan, review by Jacques-Henri Jourdan)

- #9869: Add Unix.SO_REUSEPORT